# watchdog

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  go.mod
.github/workflows/: ci.yml  release.yml
cmd/watchdog/: main.go
cmd/watchdog-log-agent/: main.go
cmd/watchdog-metrics-viewer/: viewer.go
cmd/watchdog-report-validate/: main.go  main_test.go
cmd/watchdog-sim-module/: main.go
cmd/watchdog-supervisor/: main.go
cmd/watchdogctl/: main.go  main_test.go
configs/: watchdog-supervisor.docker-sim.json  watchdog-supervisor.example.json  watchdog-supervisor.ubuntu24-amd64.json  watchdog-supervisor.ubuntu24-amd64.remote-metrics.example.json  watchdog.command.example.json  watchdog.component.example.json  watchdog.docker-sim.json  watchdog.example.json  watchdog.local-demo.example.json  watchdog.robot-baseline.example.json  watchdog.soem.example.json  watchdog.systemd.example.json  watchdog.ubuntu24-amd64.json  watchdog.ubuntu24-amd64.remote-metrics.example.json
deploy/docker/: Dockerfile  docker-compose.sim.yml
deploy/observability/: docker-compose.server.yml
deploy/systemd/: watchdog-supervisor.service  watchdog.service
docs/: action-interface.md  bus-integration.md  milestones.md  observability.md  source-protocol.md
internal/actions/: actions.go  multi.go  request.go  request_test.go  socket.go  socket_test.go
internal/adapters/: adapter.go  command.go  command_test.go
internal/app/: app.go  app_test.go
internal/atomicwrite/: atomicwrite.go  atomicwrite_test.go
internal/config/: config.go  config_test.go
internal/health/: components.go  components_test.go  model.go  transition.go
internal/incident/: writer.go  writer_test.go
internal/logagent/: agent.go  agent_test.go  health.go  health_test.go
internal/metrics/: config.go  server.go  supervisor.go  supervisor_test.go  watchdog.go  watchdog_test.go
internal/rawlog/: rawlog.go  rawlog_test.go  segment_writer.go  segment_writer_test.go
internal/retention/: retention.go  retention_test.go  sweeper.go  sweeper_test.go
internal/rules/: evaluator.go  evaluator_test.go
internal/supervisor/: config.go  config_test.go  dedup.go  server.go  (+7 more)
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/cmake/: watchdog_cppConfig.cmake.in
sdk/cpp/examples/: emit_soem_probe.cpp  send_heartbeat.cpp  write_raw_segment.cpp
sdk/cpp/examples/cmake_consumer/: CMakeLists.txt  main.cpp
sdk/cpp/fixtures/: action_request.v1.json  module_report.v1.json
sdk/cpp/include/watchdog/: client.hpp  ethercat_probe.hpp  raw_log.hpp  reporter.hpp
sdk/cpp/tests/: ethercat_probe_test.cpp  raw_log_test.cpp  reporter_test.cpp
(+44 files in other folders)
